--- a/package.json
+++ b/package.json
@@ -26,17 +26,18 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
-    "jest": "^29.6.4",
-    "@types/jest": "^29.5.4",
-    "ts-jest": "^29.1.1",
     "@nestjs/testing": "^10.2.3",
+    "@types/jest": "^29.5.4",
+    "jest": "^29.6.4",
     "supertest": "^6.3.3",
-    "tslint": "^6.1.3"
+    "ts-jest": "^29.1.1",
+    "tslint": "^6.1.3",
+    "typescript": "^5.2.2"
   },
   "dependencies": {
     "@nestjs/common": "^10.2.2",
-    "@nestjs/core": "^10.2.2"
+    "@nestjs/core": "^10.2.2",
+    "ioredis": "^5.4.2"
   },
   "jest": {
     "moduleFileExtensions": [
